<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".ui.dashboard.DashboardFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:showAnimationBehavior="inward"
        app:hideAnimationBehavior="outward"/>

    <LinearLayout
        android:id="@+id/messageDataError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_128" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_company_null"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/companyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/imageViewContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                app:layout_constraintBottom_toTopOf="@id/textView_companyId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView_companyIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:src="@tools:sample/avatars" />

            </FrameLayout>


            <TextView
                android:id="@+id/textView_companyId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/company_id"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/textView_companyName"
                app:layout_constraintEnd_toEndOf="@+id/imageViewContainer"
                app:layout_constraintStart_toStartOf="@+id/imageViewContainer"
                app:layout_constraintTop_toBottomOf="@+id/imageViewContainer" />

            <TextView
                android:id="@+id/textView_companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/textView_companyPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_companyId" />

            <TextView
                android:id="@+id/textView_companyPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:autoLink="phone"
                android:text="@string/company_phone"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/textView_companyWeb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_companyName" />

            <TextView
                android:id="@+id/textView_companyWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/company_web"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/textView_companyLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_companyPhone" />

            <TextView
                android:id="@+id/textView_companyLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:autoLink="map"
                android:text="@string/company_location"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/textView_companyDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_companyWeb" />

            <TextView
                android:id="@+id/textView_companyDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/company_description"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_companyLocation" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>